fixed upcoming layout issues

--- a/public/css/news.css
+++ b/public/css/news.css
@@ -111,7 +111,6 @@ footer{
 .set-main:active,
 .set-main:hover{
     text-decoration: none;
-    border: 0;
     outline:none !important;
 }
 
